# bitnet-cpp-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
bitnet-cpp/: Cargo.toml  README.md
bitnet-cpp-sys/: Cargo.toml  README.md  build.rs  get-deps.sh  wrapper.h
bitnet-cpp-sys/patches/: apply.sh  bitnet.patch  clean.sh  create.sh  llama.cpp.patch
bitnet-cpp-sys/src/: lib.rs
bitnet-cpp/src/: context.rs  grammar.rs  lib.rs  llama_backend.rs  llama_batch.rs  model.rs  timing.rs  token.rs  token_type.rs
bitnet-cpp/src/context/: kv_cache.rs  params.rs  perf.rs  sample.rs  sampler.rs  session.rs
bitnet-cpp/src/grammar/: tests.rs
bitnet-cpp/src/model/: params.rs
bitnet-cpp/src/model/params/: kv_overrides.rs
bitnet-cpp/src/token/: data.rs  data_array.rs
example/: usage.rs
examples/: usage.rs
patches/: apply.sh  bitnet-lut-kernels.patch  bitnet.patch  clean.sh  create.sh  kernel_config.patch  llama.cpp.patch
