[workspace]
resolver = "2"
members = [
    "bitnet-cpp",
    "bitnet-cpp-sys",
]

[workspace.dependencies]
thiserror = "1"
tracing = "0.1"
bindgen = "0.70.1"
cc = "1.1.31"
encoding_rs = "0.8.34"

[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }